# irgen-gpui

./: .gitignore  Cargo.toml  README.md  build.rs
crates/gui/: Cargo.toml
crates/gui/src/: main.rs
crates/irgen/: Cargo.toml
crates/irgen/src/: error.rs  lib.rs
crates/irgen_gui/: Cargo.toml
crates/irgen_gui/src/: main.rs
resources/: app-icon.icns
src/: error.rs  main.rs  state.rs  themes.rs  window.rs
src/services/: mod.rs  parser.rs
src/services/schema/: base.rs  mod.rs
src/themes/: catppuccin.json
src/workspace/: action.rs  header_bar.rs  mod.rs  side_bar.rs  table.rs  title_bar.rs  workspace.rs
src/workspace/platform/: mod.rs  platform_win.rs
