[workspace]
members = [
    "crates/irgen",
    "crates/irgen_gui",
]

default-members = [
    "crates/irgen_gui",
]

resolver = "3" # edition 2024

[workspace.dependencies]
gpui = { git = "https://github.com/zed-industries/zed.git" }
gpui-component = { git = "https://github.com/longbridge/gpui-component.git" }
calamine = { version = "0.30.0", features = ["dates"] }
polars = {version = "0.50.0", features = ["lazy", "strings", "regex", "string_to_integer", "dtype-array", "range", "serde", "dtype-i128", "timezones"] }
serde = {version = "1.0.219", features = ["derive"] }
anyhow = "1.0.98"
thiserror = "2.0.12"
serde_json = "1.0.141"
quick-xml = { version = "0.38.1", features = ["serialize"] }
derive_builder = "0.20.2"
regex = "1.11.1"
