[package]
name = "irgen"
version = "0.1.0"
edition = "2024"

[dependencies]
calamine.workspace = true
polars.workspace = true
serde.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde_json.workspace = true
quick-xml.workspace = true
derive_builder.workspace = true
regex.workspace = true
